Aress7/src/objects/Quote.object
<CustomObject>
    <fields>
        <fullName>Custom_T_C_Disclaimer__c</fullName>
        <inlineHelpText>If you select Quote Template &quot;Standard Quote (with Custom T&amp;C)&quot;, then this field will overwrite the standard T&amp;C disclaimer on the Quote</inlineHelpText>
        <label>Custom T&amp;C Disclaimer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>In_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_Accounts_Email__c</fullName>
        <label>Invoice/Accounts Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Needs_Approval__c</fullName>
        <label>Needs Approval</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes_about_your_order__c</fullName>
        <inlineHelpText>Notes for Supply Team</inlineHelpText>
        <label>Order Notes</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Quotes_Presented__c</fullName>
        <label>Number of Quotes Presented</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote_Notes__c</fullName>
        <inlineHelpText>Used with &quot;Built Environment&quot; Quote</inlineHelpText>
        <label>Quote Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Quote_as_result_of_CPD__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Quote as result of CPD</description>
        <label>Quote as result of CPD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Signature_Sign_Now__c</fullName>
        <label>Signature</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Option__c</fullName>
        <label>Survey Option</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Supply Only</fullName>
                </value>
                <value>
                    <fullName>Survey Option 1</fullName>
                </value>
                <value>
                    <fullName>Survey Option 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <formula>if ( TEXT(Opportunity.CurrencyIsoCode) = &quot;GBP&quot;, if( Opportunity.RecordTypeId =&apos;012240000006rJv&apos;, Subtotal , Total_Inc_VAT__c + UK_VAT__c + Workplace_Grant__c ) , Total_Inc_VAT__c + mva__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Inc_VAT__c</fullName>
        <formula>IF(Opportunity.RecordTypeId =&apos;012240000006rJv&apos;, Opportunity.Amount_Excluding_VAT__c,

IF( Opportunity.Workplace_Grant__c =TRUE, Subtotal ,Opportunity.Amount))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UK_VAT__c</fullName>
        <description>Calculates UK VAT</description>
        <formula>If(Opportunity.RecordTypeId == &apos;012240000006rJv&apos;,  Subtotal -  Total_Inc_VAT__c  , Subtotal/5 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UK VAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Workplace_Grant__c</fullName>
        <label>Workplace Grant</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>mva__c</fullName>
        <formula>Subtotal*0.25</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>mva (25%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pdfSignURL__c</fullName>
        <label>pdfSignURL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>signature__c</fullName>
        <label>signature</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>mine</fullName>
        <columns>QUOTE.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>QUOTE.ISSYNCING</columns>
        <columns>QUOTE.EXPIRATIONDATE</columns>
        <columns>QUOTE.SUBTOTAL</columns>
        <columns>QUOTE.TOTALPRICE</columns>
        <filterScope>Mine</filterScope>
        <label>My Quotes</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Bill_To_or_Ship_To_is_empty</fullName>
        <active>false</active>
        <errorConditionFormula>OR(
OR( ISBLANK(ShippingCity),
 ISBLANK(ShippingStreet ),
ISBLANK(ShippingPostalCode )
  ), 

 OR( ISBLANK(BillingCity),
 ISBLANK(BillingStreet ),
ISBLANK(BillingPostalCode )
 )
)</errorConditionFormula>
        <errorMessage>Bill To and Ship To Address cannot be blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Blank_InvoiceORAccounts_Email</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISCHANGED(Status),ISPICKVAL(Status, &apos;Accepted&apos;),ISBLANK(Invoice_Accounts_Email__c))</errorConditionFormula>
        <errorDisplayField>Invoice_Accounts_Email__c</errorDisplayField>
        <errorMessage>Please add a Invoice/Accounts Email before accepting the Quote</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Quote_cannot_be_created_as_Opp_is_Won</fullName>
        <active>true</active>
        <errorConditionFormula>TEXT(Opportunity.StageName ) = &apos;Won&apos;</errorConditionFormula>
        <errorMessage>You cannot create or edit any more quote since the opportunity is already Won.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Quote_without_survey</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISBLANK(TEXT(Survey_Option__c)), ISPICKVAL(Status,&apos;Accepted&apos;))</errorConditionFormula>
        <errorDisplayField>Survey_Option__c</errorDisplayField>
        <errorMessage>Please select a Survey Option before accepting the Quote</errorMessage>
    </validationRules>
</CustomObject>